refactored the code

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 node_modules
+visitor_Lentswe Mamonong.json
+visitor_Merriam Montsho.json
+visitor_Ofentse Sambo.json 
+visitor_Sbongile Vilakazi.json
